Added skin stats, futanari checkbox Fixed saving cards error (1-off error reading card image on load); saved cards are now visible ingame and can be loaded.

--- a/HS2CharEdit/MainWindow.xaml
+++ b/HS2CharEdit/MainWindow.xaml
@@ -1263,6 +1263,23 @@
                                     PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="2" Grid.ColumnSpan="2"
                             
                                 />
+                            <TextBox 
+                                x:Name="txt_futastate" 
+                                Visibility="Hidden"
+                                IsReadOnly="True" TextChanged="futatxtChanged" 
+                                PreviewTextInput="NumericBox" 
+                                HorizontalAlignment="Left" Height="20" Margin="214,5,0,0" 
+                                TextWrapping="Wrap" VerticalAlignment="Top" Width="70"
+                                MouseDoubleClick="SelectAddress"
+                                GotKeyboardFocus="SelectAddress"
+                                PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="4"
+                            
+                                />
+                            <CheckBox x:Name="chk_futastate" Content="Futanari"
+                                      Checked="Futacheck"
+                                      Unchecked="Futacheck"
+                                      HorizontalAlignment="Left" Margin="8,70,0,0" 
+                                      VerticalAlignment="Top" Grid.Column="2"/>
                         </Grid>
                     </TabItem>
                     <TabItem Header="Breasts">
