Slider control created, applied to voiceRate Fixed issue with saving - now triggers lost focus event first so the current control is saved. Used a hacky solution; watch out for race conditions.

--- a/HS2CharEdit/MainWindow.xaml
+++ b/HS2CharEdit/MainWindow.xaml
@@ -117,7 +117,7 @@
                         <ImageBrush ImageSource="/loadfile.ico" Stretch="Fill"/>
                     </Button.Background>
                 </Button>
-                <Button Height="30" Width="30" Margin="5,0,5,0" ToolTip="Save the card" Click="btnSaveFile_Click" Style="{DynamicResource Button_NoHover_borderless}" OpacityMask="#FFCA3A3A">
+                <Button x:Name="btnSaveFile" Height="30" Width="30" Margin="5,0,5,0" ToolTip="Save the card" Click="btnSaveFile_Click" Style="{DynamicResource Button_NoHover_borderless}" OpacityMask="#FFCA3A3A">
                     <Button.Background>
                         <ImageBrush ImageSource="/save.ico" Stretch="Fill"/>
                     </Button.Background>
@@ -145,6 +145,7 @@
                     </Button.Background>
                 </Button>
             </ToolBar>
+            <TextBox x:Name="txt_focusSnatcher" HorizontalAlignment="Right" Margin="5,5,5,5" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Panel.ZIndex="-5"/>
         </Canvas>
 
 
@@ -161,7 +162,8 @@
             <TabItem Header="Character">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="81"/>
+                        <ColumnDefinition Width="19"/>
                         <ColumnDefinition Width="100"/>
                         <ColumnDefinition Width="50"/>
                         <ColumnDefinition Width="100"/>
@@ -177,7 +179,7 @@
                         TextWrapping="Wrap" VerticalAlignment="Top" Width="150"
                         MouseDoubleClick="SelectAddress"
                         GotKeyboardFocus="SelectAddress"
-                        PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,9,0,0" 
+                        PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="2" Grid.ColumnSpan="2" Margin="0,9,0,0" 
                             
                     />
                     <Label Content="Birth Month" HorizontalAlignment="Left" Margin="5,38,0,0" VerticalAlignment="Top"  Grid.Column="0" Grid.ColumnSpan="1"/>
@@ -188,8 +190,7 @@
                                     TextWrapping="Wrap" VerticalAlignment="Top" Width="40"
                                     MouseDoubleClick="SelectAddress"
                                     GotKeyboardFocus="SelectAddress"
-                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="4"
-                                    Grid.ColumnSpan="2" Margin="0,39,0,0" 
+                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="5" Margin="0,39,0,0" 
                             
                                 />
                     <TextBox 
@@ -199,8 +200,7 @@
                                     TextWrapping="Wrap" VerticalAlignment="Top" Width="40"
                                     MouseDoubleClick="SelectAddress"
                                     GotKeyboardFocus="SelectAddress"
-                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="4"
-                                    Grid.ColumnSpan="2" Margin="0,39,0,0" 
+                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="5" Margin="0,39,0,0" 
                             
                                 />
                     <TextBox 
@@ -210,8 +210,7 @@
                                     TextWrapping="Wrap" VerticalAlignment="Top" Width="40"
                                     MouseDoubleClick="SelectAddress"
                                     GotKeyboardFocus="SelectAddress"
-                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="4"
-                                    Grid.ColumnSpan="2" Margin="0,69,0,0" 
+                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="5" Margin="0,69,0,0" 
                             
                                 />
                     <TextBox 
@@ -221,8 +220,7 @@
                                     TextWrapping="Wrap" VerticalAlignment="Top" Width="40"
                                     MouseDoubleClick="SelectAddress"
                                     GotKeyboardFocus="SelectAddress"
-                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="4"
-                                    Grid.ColumnSpan="2" Margin="0,99,0,0" 
+                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="5" Margin="0,99,0,0" 
                             
                                 />
                     <TextBox 
@@ -232,8 +230,7 @@
                                     TextWrapping="Wrap" VerticalAlignment="Top" Width="40"
                                     MouseDoubleClick="SelectAddress"
                                     GotKeyboardFocus="SelectAddress"
-                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="4"
-                                    Grid.ColumnSpan="2" Margin="0,129,0,0" 
+                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="5" Margin="0,129,0,0" 
                             
                                 />
                     <ComboBox x:Name="cbo_month" 
@@ -241,7 +238,7 @@
                         SelectedValuePath="Content"
                         HorizontalAlignment="Left" Height="25"
                          VerticalAlignment="Top" Width="60"
-                        Grid.Column="1"  Margin="0,39,0,0" 
+                        Grid.Column="2"  Margin="0,39,0,0" 
                         >
                         <ComboBoxItem Content="01 Jan"></ComboBoxItem>
                         <ComboBoxItem Content="02 Feb"></ComboBoxItem>
@@ -262,7 +259,7 @@
                         SelectedValuePath="Content"                              
                         HorizontalAlignment="Left" Height="25"
                          VerticalAlignment="Top" Width="60"
-                        Grid.Column="1"  Margin="0,69,0,0" 
+                        Grid.Column="2"  Margin="0,69,0,0" 
                         >
                         <ComboBoxItem Content="01" />
                         <ComboBoxItem Content="02" />
@@ -305,28 +302,38 @@
                                     TextWrapping="Wrap" VerticalAlignment="Top" Width="40"
                                     MouseDoubleClick="SelectAddress"
                                     GotKeyboardFocus="SelectAddress"
-                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="4" Grid.ColumnSpan="2" Margin="0,69,0,0" 
+                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="5" Margin="0,69,0,0" 
                                 />
-                    <Button x:Name="btn_editName" IsEnabled="False" Grid.Column="3" Content="Edit" Visibility="Hidden" HorizontalAlignment="Left" Height="20" Margin="6,9,0,0" VerticalAlignment="Top" Width="110" Click="btn_editName_Click" Grid.ColumnSpan="2"/>
+                    <Button x:Name="btn_editName" IsEnabled="False" Grid.Column="4" Content="Edit" Visibility="Hidden" HorizontalAlignment="Left" Height="20" Margin="6,9,0,0" VerticalAlignment="Top" Width="110" Click="btn_editName_Click" Grid.ColumnSpan="2"/>
                     <Label Content="Voice Pitch" HorizontalAlignment="Left" Margin="5,98,0,0" VerticalAlignment="Top"  Grid.Column="0" Grid.ColumnSpan="1"/>
                     <TextBox 
                                     x:Name="txt_voiceRate" 
                                     IsReadOnly="True" 
                                     LostFocus="CheckNumBox"
+                                    TextChanged="TextToSlider" Visibility="Hidden"
                                     HorizontalAlignment="Left" Height="20" Margin="0,99,0,0" 
                                     TextWrapping="Wrap" VerticalAlignment="Top" Width="70"
                                     MouseDoubleClick="SelectAddress"
                                     GotKeyboardFocus="SelectAddress"
-                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="1" Grid.ColumnSpan="2"
+                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="2"
                             
                                 />
+                    <Slider x:Name="sld_voiceRate" 
+                            HorizontalAlignment="Center" 
+                            Margin="0,99,0,0"  VerticalAlignment="Top" 
+                            Width="100" Maximum="200" Minimum="-100"
+                            Thumb.DragCompleted="Slider_DragCompleted"
+                            AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0"
+                            TickFrequency="1" IsSnapToTickEnabled="True"
+                            Grid.Column="2"
+                            />
                     <Label Content="Personality" HorizontalAlignment="Left" Margin="5,128,0,0" VerticalAlignment="Top"  Grid.Column="0" Grid.ColumnSpan="1"/>
                     <ComboBox x:Name="cbo_personality" Margin="0,129,0,0"
                         SelectionChanged="dropSelectChanged"
                         SelectedValuePath="Content"
-                        HorizontalAlignment="Left" Height="25"
+                        HorizontalAlignment="Center" Height="25"
                          VerticalAlignment="Top" Width="100"
-                        Grid.Column="1"   
+                        Grid.Column="2"   
                         >
                         <ComboBoxItem Content="Composed"></ComboBoxItem>
                         <ComboBoxItem Content="Normal"></ComboBoxItem>
@@ -348,9 +355,9 @@
                     <ComboBox x:Name="cbo_trait" Margin="0,159,0,0"
                         SelectionChanged="dropSelectChanged"
                         SelectedValuePath="Content"
-                        HorizontalAlignment="Left" Height="25"
+                        HorizontalAlignment="Center" Height="25"
                          VerticalAlignment="Top" Width="100"
-                        Grid.Column="1"   
+                        Grid.Column="2"   
                         >
                         <ComboBoxItem Content="None"></ComboBoxItem>
                         <ComboBoxItem Content="Clean Lover"></ComboBoxItem>
@@ -372,9 +379,9 @@
                     <ComboBox x:Name="cbo_mentality" Margin="0,189,0,0"
                         SelectionChanged="dropSelectChanged"
                         SelectedValuePath="Content"
-                        HorizontalAlignment="Left" Height="25"
+                        HorizontalAlignment="Center" Height="25"
                          VerticalAlignment="Top" Width="100"
-                        Grid.Column="1"   
+                        Grid.Column="2"   
                         >
                         <ComboBoxItem Content="None"></ComboBoxItem>
                         <ComboBoxItem Content="Curious"></ComboBoxItem>
@@ -396,9 +403,9 @@
                     <ComboBox x:Name="cbo_sextrait" Margin="0,219,0,0"
                         SelectionChanged="dropSelectChanged"
                         SelectedValuePath="Content"
-                        HorizontalAlignment="Left" Height="25"
+                        HorizontalAlignment="Center" Height="25"
                          VerticalAlignment="Top" Width="100"
-                        Grid.Column="1"   
+                        Grid.Column="2"   
                         >
                         <ComboBoxItem Content="None"></ComboBoxItem>
                         <ComboBoxItem Content="Horny"></ComboBoxItem>
@@ -413,6 +420,52 @@
                         <ComboBoxItem Content="Lonely"></ComboBoxItem>
 
                     </ComboBox>
+
+                    <Label Content="Broken" Visibility="Hidden" HorizontalAlignment="Left" Margin="5,188,0,0" VerticalAlignment="Top"  Grid.Column="4" Grid.ColumnSpan="1"/>
+
+                    <TextBox 
+                                    x:Name="txt_broken" Visibility="Hidden"
+                                    IsReadOnly="True" TextChanged="TextToSlider"
+                                    HorizontalAlignment="Left" Height="20" 
+                                    TextWrapping="Wrap" VerticalAlignment="Top" Width="70"
+                                    MouseDoubleClick="SelectAddress"
+                                    GotKeyboardFocus="SelectAddress"
+                                    Margin="5,223,0,0"
+                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="5"
+                            
+                                />
+                    <Slider x:Name="sld_broken" 
+                            Visibility="Hidden"
+                            Grid.Column="5" HorizontalAlignment="Center" 
+                            Margin="0,193,0,0" VerticalAlignment="Top" 
+                            Width="100" Maximum="100"
+                            Thumb.DragCompleted="Slider_DragCompleted"
+                            AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0"
+                            TickFrequency="1" IsSnapToTickEnabled="True"
+                            />
+
+                    <Label Content="Dependence" Visibility="Hidden" HorizontalAlignment="Left" Margin="5,218,0,0" VerticalAlignment="Top"  Grid.Column="4" Grid.ColumnSpan="1"/>
+
+                    <TextBox 
+                                    x:Name="txt_dependence" Visibility="Hidden"
+                                    IsReadOnly="True" TextChanged="TextToSlider"
+                                    HorizontalAlignment="Left" Height="20" 
+                                    TextWrapping="Wrap" VerticalAlignment="Top" Width="70"
+                                    MouseDoubleClick="SelectAddress"
+                                    GotKeyboardFocus="SelectAddress"
+                                    Margin="5,223,0,0"
+                                    PreviewMouseLeftButtonDown="SelectivelyIgnoreMouseButton" Grid.Column="5"
+                            
+                                />
+                    <Slider x:Name="sld_dependence" 
+                            Visibility="Hidden"
+                            Grid.Column="5" HorizontalAlignment="Center" 
+                            Margin="0,223,0,0" VerticalAlignment="Top" 
+                            Width="100" Maximum="100"
+                            Thumb.DragCompleted="Slider_DragCompleted"
+                            AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0"
+                            TickFrequency="1" IsSnapToTickEnabled="True"
+                            />
 
                 </Grid>
             </TabItem>
